Test on IE8/9 and apply fixes

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,12 @@ body {
 	color: #333;
 }
 
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .browsehappy {
 	margin: 0.2em 0;
 	background: #ccc;
